kb: add/update topics Java Generics Deep Dive, JVM Memory Management, Concurrency Patterns in Java